style.css
*,
*::after,
*::before {
    box-sizing: border-box;
}
@font-face {
    font-display: swap;
    font-family: "Montserrat";
    font-style: normal;
    font-weight: 400;
    src: url("../fonts/montserrat-v29-latin-regular.woff2") format("woff2");
}
body {
    padding: 0;
    margin: 0;
}
h1,
h2,
h3 {
    margin: 0;
}
h3 {
    font-size: 24px;
    color: #333333;
}
button {
    border: none;
    border-radius: 60px;
    padding: 20px 64px;
    text-transform: uppercase;
    background-color: #4f62f6;
    color: white;
    cursor: pointer;
}
button:hover {
    background-color: #7181fc;
}
button:focus {
    background-color: #354bf4;
}
button:disabled {
    cursor: auto;
    color: #828282;
    background-color: #e0e0e0;
}
nav {
    z-index: 2;
    padding: 0 60px 0 8.31%;
    width: 100%;
    display: flex;
    position: fixed;
    justify-content: space-between;
    align-items: center;
    background-color: white;
    height: 80px;
}
nav h2 {
    color: #333333;
    font-size: 1rem;
    font-weight: 700;
}
nav button {
    padding: 13px 24px;
}
nav ul {
    display: flex;
    gap: 2rem;
    margin: 0;
    margin-left: 4rem;
    list-style-type: none;
    padding: 0;
}
.burger {
    padding: 0.2rem;
    display: none;
    height: 24px;
}

.burger > * {
    border-top: 3px solid black;
    width: 24px;
}
li {
    font-size: 15px;
}
select {
    color: #333333;
    border: 1px solid black;
    border-radius: 60px;
    padding: 10px 16px;
}
.flex {
    display: flex;
    align-items: center;
    justify-content: center;
}
.button-nav-container {
    display: flex;
    gap: 1.5rem;
}
.header-main {
    padding: 0 8.31% 0 8.31%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    position: relative;
    top: 80px;
    height: 720px;
    color: #333333;
    background-color: hsl(249, 100%, 64%, 10%);
}
.header-main-content {
    max-height: 398px;
    width: 585px;
    display: flex;
    gap: 2.5rem;
    flex-direction: column;
    justify-content: space-around;
    align-items: start;
}
.header-main > img {
    max-width: 482px;
    max-height: 519px;
}
.header-main p {
    max-width: 483px;
}
h1 {
    font-weight: 500;
    line-height: 72px;
    color: #333333;
    font-size: 64px;
}
p {
    margin: 0;
    font-family: "Montserrat", sans-serif;
    font-size: 18px;
    line-height: 30px;
    color: #4f4f4f;
}
main {
    padding: 140px 8.31% 0 8.31%;
    padding-left: 8.31%;
}
main h1 {
    font-size: 56px;
    max-width: 483px;
    line-height: 66px;
}
.block-list {
    position: relative;
    padding: 4rem 0;
    display: inline-flex;
    flex-direction: column;
    margin: 0;
}
.block-list > li {
    z-index: 1;
    background-color: white;
    position: relative;
    max-width: 483px;
    list-style-type: decimal-leading-zero;
    list-style-position: inside;
    border: 2px solid #6248ff;
    border-radius: 30px;
    padding: 2rem;
}
.line-right + li {
    left: 150%;
}
.block-list > li:nth-child(3) {
    top: -50px;
}
.block-list > li:nth-child(5) {
    top: calc(-50px * 2);
}
.block-list > li:nth-child(7) {
    top: calc(-50px * 3);
}
.block-list > li::marker {
    color: #6248ff;
    font-size: 15px;
}
.background-purple {
    background-color: hsl(249, 100%, 64%, 10%);
}
div[class^="line"] {
    position: absolute;
    border-radius: 1rem;
    border-top: 3px dotted #6c47ff;
    width: 583px;
    height: 100px;
}
.line-right {
    left: 90%;
}
.line-right:first-of-type {
    top: 15%;
    border-right: 2px dashed #6c47ff;
}
.line-right:last-of-type {
    top: 50%;
    border-right: 2px dashed #6c47ff;
}
.line-left {
    top: 35%;
    left: 50%;
    border-left: 2px dashed #6c47ff;
}
.circle-button {
    background-color: white;
    border-radius: 50%;
    aspect-ratio: 1/1;
    width: 48px;
    padding: 0;
    border: 1px solid #e0e0e0;
    color: black;
}
.circle-button:focus,
.circle-button:hover {
    background-color: white;
    border-color: #6248ff;
}
.circle-button-container {
    grid-row: 2/3;
    margin: 2rem 0 3rem 0;
}
.person-info {
    align-items: center;
    display: grid;
    gap: 0.25rem 1rem;
    padding: 1rem 0;
    grid-template-columns: min-content 1fr;
}
.person-info img {
    grid-row: 1/3;
    border-radius: 50%;
    width: 73px;
}
.person-info h3 {
    font-size: 18px;
}
.person-info p {
    font-size: 16px;
    line-height: 27px;
}
.review-section {
    padding-bottom: 64px;
    display: grid;
    grid-template-columns: 1fr min-content 1fr;
}
.qoutes {
    align-self: center;
    color: white;
    -webkit-text-stroke: 2px #6248ff; /* Обводка */

    font-size: 56px;
}
.review-iterator {
    grid-column: 3/4;
    grid-row: 2/3;
    align-self: end;
    font-weight: 500;
    color: #6248ff;
}

@media screen and (width<1100px) {
    nav ul,
    nav select,
    nav h2 {
        display: none;
    }
    nav {
        justify-content: end;
        gap: 3rem;
    }
    .burger {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }
}

